# asiolibs

./: .gitignore  CMakeLists.txt
cmake/: asiolibsConfig.cmake.in
docs/: README.md
include/asiolibs/: AsioIssues.hpp
integtest/: socket_reader_test.py
plugins/: FakeSocketWriterModule.cpp  FakeSocketWriterModule.hpp  SocketReaderModule.cpp  SocketReaderModule.hpp  SocketWriterModule.cpp  SocketWriterModule.hpp
schema/asiolibs/opmon/: FakeSocketWriterModule.proto  SocketReaderModule.proto  SocketWriterModule.proto  SourceModel.proto
scripts/: asiolibs_integtest_bundle.sh
src/: CRTBernFrameBuilder.hpp  CRTGrenobleFrameBuilder.hpp  CreateFrameBuilder.hpp  CreateGenericCallback.hpp  CreateGenericReceiver.hpp  CreateSource.hpp  FakeWIBEthFrameBuilder.hpp  FrameBuilder.hpp  GenericCallbackConcept.hpp  GenericCallbackModel.hpp  GenericReceiverConcept.hpp  GenericReceiverModel.hpp  IfaceWrapper.cpp  IfaceWrapper.hpp  SourceConcept.hpp  SourceModel.hpp
src/detail/: IfaceWrapper.hxx
test/apps/: test_socket_receiver.cxx
